# coldflame-qml-extension

./: .gitignore  CFButton.qml  CFLabel.qml  CFWindow.qml  CMakeLists.txt  IgniteUI.kdev4  igniteui.cpp  igniteui.h  qmldir
.kdev4/: IgniteUI.kdev4
example/: example.cpp  example.qml
